--- a/config.cfg
+++ b/config.cfg
@@ -6,13 +6,14 @@ bind "3" "slot3"
 bind "4" "slot4"
 bind "5" "slot5"
 bind "9" "slot9"
-bind "a" "+moveleft;r_cleardecals;+cl_show_team_equipment"
+bind "a" "+moveleft;r_cleardecals"
 bind "b" "buymenu"
-bind "d" "+moveright;r_cleardecals;+cl_show_team_equipment"
+bind "d" "+moveright;r_cleardecals"
 bind "e" "+use"
 bind "f" "use weapon_knife; use weapon_hegrenade;"
 bind "g" "drop"
 bind "h" "slot12"
+bind "i" "messagemode"
 bind "m" "teammenu"
 bind "q" "lastinv"
 bind "r" "+reload"
@@ -22,7 +23,6 @@ bind "u" "messagemode2"
 bind "v" "+jumpthrow"
 bind "w" "+forward"
 bind "x" "radio1"
-bind "y" "messagemode"
 bind "z" "use weapon_knife; use weapon_smokegrenade;"
 bind "," "buyammo1"
 bind "." "buyammo2"
@@ -96,8 +96,8 @@ c_thirdpersonshoulderaimdist "120.0"
 c_thirdpersonshoulderdist "40.0"
 c_thirdpersonshoulderheight "5.0"
 c_thirdpersonshoulderoffset "20.0"
-cachedvalue_count_partybrowser "1582673936"
-cachedvalue_count_teammates "1582674432"
+cachedvalue_count_partybrowser "1590732814"
+cachedvalue_count_teammates "1590732800"
 cam_collision "1"
 cam_idealdelta "4.0"
 cam_idealdist "150"
@@ -116,13 +116,15 @@ cl_allowdownload "1"
 cl_allowupload "1"
 cl_autohelp "0"
 cl_autowepswitch "0"
-cl_bob_lower_amt "5.000000"
-cl_bobamt_lat "0.100000"
-cl_bobamt_vert "0.100000"
-cl_bobcycle "0.980000"
+cl_bob_lower_amt "5"
+cl_bobamt_lat "0.1"
+cl_bobamt_vert "0.1"
+cl_bobcycle "0.98"
+cl_buywheel_nomousecentering "1"
+cl_buywheel_nonumberpurchasing "1"
 cl_chatfilter_version "1"
 cl_chatfilters "63"
-cl_clanid "2151"
+cl_clanid "0"
 cl_cmdrate "128"
 cl_color "0"
 cl_compass_enabled "1"
@@ -132,21 +134,21 @@ cl_crosshair_dynamic_splitalpha_innermod "1"
 cl_crosshair_dynamic_splitalpha_outermod "0.5"
 cl_crosshair_dynamic_splitdist "7"
 cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "0.000000"
+cl_crosshair_outlinethickness "1"
 cl_crosshair_sniper_show_normal_inaccuracy "0"
 cl_crosshair_sniper_width "1"
 cl_crosshair_t "0"
-cl_crosshairalpha "255.000000"
+cl_crosshairalpha "250"
 cl_crosshaircolor "5"
-cl_crosshaircolor_b "0.000000"
-cl_crosshaircolor_g "255.000000"
-cl_crosshaircolor_r "255.000000"
-cl_crosshairdot "0"
-cl_crosshairgap "-2.374332"
+cl_crosshaircolor_b "0"
+cl_crosshaircolor_g "0"
+cl_crosshaircolor_r "255"
+cl_crosshairdot "1"
+cl_crosshairgap "-4"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1.212992"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0.819657"
+cl_crosshairsize "1"
+cl_crosshairstyle "5"
+cl_crosshairthickness "0"
 cl_crosshairusealpha "1"
 cl_debugrumble "0"
 cl_detail_avoid_force "0.4"
@@ -154,24 +156,24 @@ cl_detail_avoid_radius "64"
 cl_detail_avoid_recover_speed "0.25"
 cl_detail_max_sway "5"
 cl_disablefreezecam "0"
-cl_disablehtmlmotd "0"
+cl_disablehtmlmotd "1"
 cl_dm_buyrandomweapons "1"
 cl_downloadfilter "all"
 cl_dz_playagain_auto_spectate "0"
 cl_embedded_stream_audio_volume "60"
 cl_embedded_stream_audio_volume_xmaster "1"
 cl_fixedcrosshairgap "3"
-cl_forcepreload "1"
+cl_forcepreload "0"
 cl_freezecampanel_position_dynamic "1"
 cl_grass_mip_bias "-0.5"
 cl_hide_avatar_images ""
 cl_hud_background_alpha "1"
 cl_hud_bomb_under_radar "1"
 cl_hud_color "1"
-cl_hud_healthammo_style "0"
+cl_hud_healthammo_style "1"
 cl_hud_playercount_pos "1"
 cl_hud_playercount_showcount "1"
-cl_hud_radar_scale "0.9"
+cl_hud_radar_scale "1"
 cl_idealpitchscale "0.8"
 cl_inventory_saved_filter2 "all"
 cl_inventory_saved_sort2 "inv_sort_age"
@@ -187,13 +189,13 @@ cl_obs_interp_enable "1"
 cl_observercrosshair "1"
 cl_player_ping_mute "0"
 cl_playerspray_auto_apply "1"
-cl_promoted_settings_acknowledged "1:1576885255331"
+cl_promoted_settings_acknowledged "1:1590733047435"
 cl_quickinventory_lastinv "1"
 cl_quickinventory_line_update_speed "65.0f"
 cl_radar_always_centered "1"
-cl_radar_icon_scale_min "1"
+cl_radar_icon_scale_min "1.25"
 cl_radar_rotate "1"
-cl_radar_scale "0.55"
+cl_radar_scale "0.45"
 cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab "0"
 cl_radialmenu_deadzone_size "0.04"
@@ -203,12 +205,13 @@ cl_sanitize_player_names "0"
 cl_scoreboard_mouse_enable_binding "+attack2"
 cl_scoreboard_survivors_always_on "0"
 cl_show_clan_in_death_notice "1"
+cl_show_observer_crosshair "2"
 cl_showhelp "0"
-cl_showloadout "0"
+cl_showloadout "1"
 cl_showpluginmessages2 "0"
 cl_sniper_delay_unscope "0"
 cl_spec_follow_grenade_key "0"
-cl_spec_mode "4"
+cl_spec_mode "5"
 cl_tablet_mapmode "1"
 cl_teamid_overhead_mode "2"
 cl_teammate_colors_show "1"
@@ -222,6 +225,7 @@ cl_viewmodel_shift_right_amt "0.75"
 closecaption "0"
 closeonbuy "0"
 commentary_firstrun "0"
+con_allownotify "1"
 con_enable "1"
 crosshair "1"
 dsp_enhance_stereo "0"
@@ -230,7 +234,7 @@ force_audio_english "0"
 func_break_max_pieces "15"
 g15_update_msec "250"
 gameinstructor_enable "0"
-hud_scaling "0.95"
+hud_scaling "0.950000"
 hud_showtargetid "1"
 hud_takesshots "0"
 joy_accelmax "1.0"
@@ -315,10 +319,10 @@ mm_csgo_community_search_players_min "3"
 mm_dedicated_search_maxping "40"
 mm_server_search_lan_ports "27015,27016,27017,27018,27019,27020"
 muzzleflash_light "1"
-name "RMK"
+name "slay"
 net_allow_multicast "1"
-net_graph "1"
-net_graphheight "930"
+net_graph "0"
+net_graphheight "0"
 net_graphholdsvframerate "0"
 net_graphipc "0"
 net_graphmsecs "400"
@@ -338,17 +342,17 @@ option_speed_method "0"
 password ""
 play_distance "1"
 player_botdifflast_s "2"
-player_competitive_maplist_2v2_8_1_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
-player_competitive_maplist_8_8_1_475B5511 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_vertigo,mg_de_mirage,mg_cs_office,mg_de_cache,mg_cs_agency,mg_de_overpass"
+player_competitive_maplist_2v2_8_0_E8907D2E "mg_de_train,mg_de_lake,mg_de_inferno,mg_de_shortnuke,mg_de_vertigo,mg_gd_rialto,mg_de_shortdust,mg_de_overpass,mg_de_cbble"
+player_competitive_maplist_8_8_0_1B1D6577 "mg_de_dust2,mg_de_train,mg_de_inferno,mg_de_nuke,mg_de_vertigo,mg_de_mirage,mg_cs_office,mg_de_cache,mg_de_anubis,mg_de_chlorine,mg_cs_agency,mg_de_overpass"
 player_nevershow_communityservermessage "1"
-player_survival_list_8_1_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
-player_teamplayedlast "3"
-player_wargames_list2_8_1_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
+player_survival_list_8_0_7 "mg_dz_blacksite,mg_dz_sirocco,mg_dz_junglety"
+player_teamplayedlast "2"
+player_wargames_list2_8_0_604 "mg_skirmish_flyingscoutsman,mg_skirmish_armsrace,mg_skirmish_demolition"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_drawtracers_firstperson "0"
 r_eyegloss "0"
-r_eyemove "1"
+r_eyemove "0"
 r_eyeshift_x "0"
 r_eyeshift_y "0"
 r_eyeshift_z "0"
@@ -364,7 +368,7 @@ scene_showfaceto "0"
 scene_showlook "0"
 scene_showmoveto "0"
 scene_showunlock "0"
-sensitivity "2"
+sensitivity "1.6"
 sk_autoaim_mode "1"
 skill "1.000000"
 snd_deathcamera_volume "0.0"
@@ -392,13 +396,11 @@ snd_pitchquality "1"
 snd_roundend_volume "0."
 snd_roundstart_volume "0.0"
 snd_surround_speakers "-1"
-snd_tensecondwarning_volume "0.0"
+snd_tensecondwarning_volume "0"
 sound_device_override ""
 spec_replay_autostart "1"
 spec_show_xray "0"
 spec_usenumberkeys_nobinds "1"
-spec_xray_dropped_defusers "1"
-spec_xray_dropped_unoccluded "1"
 ss_splitmode "0"
 store_version "1"
 suitvolume "0.25"
@@ -412,7 +414,7 @@ sv_logsdir "logs"
 sv_noclipaccelerate "5"
 sv_noclipspeed "5"
 sv_pvsskipanimation "1"
-sv_skyname "cs_tibet"
+sv_skyname "nukeblank"
 sv_specaccelerate "5"
 sv_specnoclip "1"
 sv_specspeed "3"
@@ -430,8 +432,9 @@ tr_completed_training "0"
 triple_monitor_mode "0"
 tv_nochat "0"
 ui_inventorysettings_recently_acknowledged ""
-ui_nearbylobbies_filter2 "competitive"
-ui_news_last_read_link "https://blog.counter-strike.net/de/index.php/2020/02/28757/"
+ui_mainmenu_bkgnd_movie1 "sirocco_night"
+ui_nearbylobbies_filter3 "competitive"
+ui_news_last_read_link "https://blog.counter-strike.net/de/index.php/2020/05/30213/"
 ui_playsettings_maps_listen_casual "random_classic"
 ui_playsettings_maps_listen_competitive "random_classic"
 ui_playsettings_maps_listen_deathmatch "random_classic"
@@ -452,12 +455,12 @@ ui_vanitysetting_loadoutslot_ct "rifle2"
 ui_vanitysetting_loadoutslot_t "melee"
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
-viewmodel_fov "68"
-viewmodel_offset_x "1.5"
-viewmodel_offset_y "-2"
-viewmodel_offset_z "-2"
-viewmodel_presetpos "1"
-viewmodel_recoil "0"
+viewmodel_fov "65"
+viewmodel_offset_x "2"
+viewmodel_offset_y "1.5"
+viewmodel_offset_z "-1"
+viewmodel_presetpos "0"
+viewmodel_recoil "1"
 voice_caster_enable "0"
 voice_caster_scale "1"
 voice_enable "1"
@@ -467,10 +470,10 @@ voice_mixer_mute "0"
 voice_mixer_volume "0.5"
 voice_modenable "1"
 voice_positional "0"
-voice_scale "0.12"
+voice_scale "0.2"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.35"
+volume "0.5"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
